tests/rosetta/out/Java/barnsley-fern.error
javac: exit status 1
/tmp/BarnsleyFern.java:19: error: incompatible types: double cannot be converted to String
        int height = Integer.parseInt((width * dy / dx));
                                                  ^
/tmp/BarnsleyFern.java:35: error: incompatible types: double cannot be converted to String
        int ix = Integer.parseInt(((Double.parseDouble(String.valueOf(width))) * (x - xMin) / dx));
                                                                                            ^
/tmp/BarnsleyFern.java:36: error: incompatible types: double cannot be converted to String
        int iy = Integer.parseInt(((Double.parseDouble(String.valueOf(height))) * (yMax - y) / dy));
                                                                                             ^
/tmp/BarnsleyFern.java:44: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> r = res.get(1);
                                     ^
/tmp/BarnsleyFern.java:45: error: bad operand types for binary operator '<'
            if (r < 85) {
                  ^
  first type:  List<Integer>
  second type: int
/tmp/BarnsleyFern.java:51: error: incompatible types: double cannot be converted to String
            ix = (int)(Integer.parseInt(((Double.parseDouble(String.valueOf(width))) * (x - xMin) / dx)));
                                                                                                  ^
/tmp/BarnsleyFern.java:52: error: incompatible types: double cannot be converted to String
            iy = (int)(Integer.parseInt(((Double.parseDouble(String.valueOf(height))) * (yMax - y) / dy)));
                                                                                                   ^
Note: /tmp/BarnsleyFern.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
